# Practice

./: CMakeLists.txt  README.md  myvimrc
app/: CMakeLists.txt
app/linkedList/: main.c
app/simple-demo/: linkedList.h  main  main.c
app/singly_linked_list/: CMakeLists.txt  main.c
app/workspace/: d_linkedList.c  d_linkedList.h  main.c
doubly_linked_list/: d_linkedList.c  d_linkedList.h  main.c
include/: linkedList.h  s_linkedList.h
queue/: main.c  queue.c  queue.h
singly_linked_list/: main  main.c  s_linkedList.c  s_linkedList.h
src/: linkedList.c  s_linkedList.c
stack/: main  main.c  node_stack.c  node_stack.h
tcp_echo/: README.md  client.c  server.c
workspace/: d_linkedList.c  d_linkedList.h  m  main.c
